added html get and post requests

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -213,6 +213,7 @@
     // Capture the form inputs
     $("#submit").on("click", function(event) {
       event.preventDefault();
+      console.log("click");
 
       // Form validation
       function validateForm() {
@@ -256,11 +257,11 @@
         $.post("/api/friends", userData, function(data) {
 
           // Grab the result from the AJAX post so that the best match's name and photo are displayed.
-          $("#match-name").text(data.name);
-          $("#match-img").attr("src", data.photo);
+         // $("#match-name").text(data.name);
+        //  $("#match-img").attr("src", data.photo);
 
           // Show the modal with the best match
-          $("#results-modal").modal("toggle");
+      //    $("#results-modal").modal("toggle");
 
         });
       } else {
