added working matching functionality

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -255,7 +255,7 @@
 
         // AJAX post the data to the friends API.
         $.post("/api/friends", userData, function(data) {
-
+          console.log(data);
           // Grab the result from the AJAX post so that the best match's name and photo are displayed.
          // $("#match-name").text(data.name);
         //  $("#match-img").attr("src", data.photo);
