--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -178,7 +178,7 @@
         </div>
         <div class="modal-body">
           <h2 id="match-name"></h2>
-          <img id="match-img" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/6/005/064/1bd/3435aa3.jpg" alt="">
+          <img id="match-img" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/6/005/064/1bd/3435aa3.jpg" alt="match" style="max-width: 400px;">
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -256,12 +256,12 @@
         // AJAX post the data to the friends API.
         $.post("/api/friends", userData, function(data) {
           console.log(data);
-          // Grab the result from the AJAX post so that the best match's name and photo are displayed.
-         // $("#match-name").text(data.name);
-        //  $("#match-img").attr("src", data.photo);
+        // Grab the result from the AJAX post so that the best match's name and photo are displayed.
+         $("#match-name").text(data.name);
+         $("#match-img").attr("src", data.photo);
 
-          // Show the modal with the best match
-      //    $("#results-modal").modal("toggle");
+        // Show the modal with the best match
+         $("#results-modal").modal("toggle");
 
         });
       } else {
